crates/stackable-versioned/tests/snapshots/conversion__fail@request_missing.json.snap
---
source: crates/stackable-versioned/tests/conversion.rs
expression: formatted
input_file: crates/stackable-versioned/tests/inputs/conversions/fail/request_missing.json
---
{
  "apiVersion": "apiextensions.k8s.io/v1",
  "kind": "ConversionReview",
  "response": {
    "uid": "",
    "result": {
      "status": "Failure",
      "code": 400,
      "message": "request missing in ConversionReview",
      "reason": "request missing in ConversionReview"
    },
    "convertedObjects": []
  }
}
