crates/stackable-versioned/tests/snapshots/conversion__fail@unkown_current_version.json.snap
---
source: crates/stackable-versioned/tests/conversion.rs
expression: formatted
input_file: crates/stackable-versioned/tests/inputs/conversions/fail/unkown_current_version.json
---
{
  "apiVersion": "apiextensions.k8s.io/v1",
  "kind": "ConversionReview",
  "response": {
    "uid": "c4e55572-ee1f-4e94-9097-28936985d45f",
    "result": {
      "status": "Failure",
      "code": 400,
      "message": "failed to parse object: encountered unknown object API version \"test.stackable.tech/v99\"",
      "reason": "failed to parse object: encountered unknown object API version \"test.stackable.tech/v99\""
    },
    "convertedObjects": []
  }
}
