crates/stackable-versioned/tests/snapshots/conversion__fail@unparseable_missing_field.json.snap
---
source: crates/stackable-versioned/tests/conversion.rs
expression: formatted
input_file: crates/stackable-versioned/tests/inputs/conversions/fail/unparseable_missing_field.json
---
{
  "apiVersion": "apiextensions.k8s.io/v1",
  "kind": "ConversionReview",
  "response": {
    "uid": "c4e55572-ee1f-4e94-9097-28936985d45f",
    "result": {
      "status": "Failure",
      "code": 400,
      "message": "failed to parse object: failed to deserialize object from JSON: missing field `username`",
      "reason": "failed to parse object: failed to deserialize object from JSON: missing field `username`"
    },
    "convertedObjects": []
  }
}
