crates/stackable-versioned/tests/snapshots/conversion__pass@persons_to_v1alpha1.json.snap
---
source: crates/stackable-versioned/tests/conversion.rs
expression: formatted
input_file: crates/stackable-versioned/tests/inputs/conversions/pass/persons_to_v1alpha1.json
---
{
  "apiVersion": "apiextensions.k8s.io/v1",
  "kind": "ConversionReview",
  "response": {
    "uid": "c4e55572-ee1f-4e94-9097-28936985d45f",
    "result": {
      "status": "Success"
    },
    "convertedObjects": [
      {
        "apiVersion": "test.stackable.tech/v1alpha1",
        "kind": "Person",
        "metadata": {
          "name": "sbernauer",
          "namespace": "default",
          "uid": "d41e2019-5de3-409c-a7b2-0799ecb95e4b"
        },
        "spec": {
          "username": "sbernauer"
        }
      },
      {
        "apiVersion": "test.stackable.tech/v1alpha1",
        "kind": "Person",
        "metadata": {},
        "spec": {
          "username": "sbernauer"
        }
      },
      {
        "apiVersion": "test.stackable.tech/v1alpha1",
        "kind": "Person",
        "metadata": {},
        "spec": {
          "username": "sbernauer"
        }
      },
      {
        "apiVersion": "test.stackable.tech/v1alpha1",
        "kind": "Person",
        "metadata": {},
        "spec": {
          "username": "sbernauer"
        }
      },
      {
        "apiVersion": "test.stackable.tech/v1alpha1",
        "kind": "Person",
        "metadata": {},
        "spec": {
          "username": "sbernauer"
        }
      }
    ]
  }
}
